Updated project to Java 21, migrated to Jakarta namespace, updated dependencies to latest versions.